--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <!-- World of Rolex-->
     <div id="world-of-rolex" class="container-fluid bg-light">
         <h4 class="text-center pb-4 pt-4 heading"><u>World of Rolex</u></h4>
-        <p class="text-uppercase px-5 pb-4" style="font-size: 1.25rem; font-weight: bold;">Today, Rolex is present at the most prestigious events in golf, sailing, tennis, motor sport, and at equestrian tournaments. Rolex makes a unique and lasting contribution to global sports.</p>
+        <p class="text-uppercase px-5 pb-4" style="font-size: 1.25rem; font-weight: bold;">Today, Rolex is present at the most prestigious events in golf, yachting, tennis, motor sport, and equestrianism. Rolex makes a unique and lasting contribution to global sports.</p>
         <div class="row mt-5 mb-5">
             <div class="col-md-8 order-1 order-md-12">
                 <h5 class="px-5 mt-md-3 mt-4" style="text-decoration: underline; text-underline-offset: 5px;">Rolex & Tennis</h5>
