--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h4 class="text-center pb-2 pt-2 heading"><u>Collection</u></h4>
     
         <div class="row pt-4">
-            <div class="col-md text-center">
+            <div class="col-md text-center" id="air-king">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Air-King</h5>
                 <img src="media/images/air-king.png" alt="air-king" class="watches">
                 <h5 style="font-family: serif; font-size: 1.1rem;">A HOMAGE TO AVIATION</h5>
@@ -81,7 +81,7 @@
                 </div>
                 <button id="view-details-button-1" class="btn btn-outline-success details" onclick="viewDetails1()">View Details</button>
             </div>
-            <div class="col-md text-center">
+            <div class="col-md text-center" id="cellini">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Cellini</h5>
                 <img src="media/images/cellini.png" alt="cellini" class="watches">
                 <h5 style="font-family: serif; font-size: 1.1rem;">THE CLASSICAL WATCH</h5>
@@ -93,7 +93,7 @@
                 </div>
                 <button id="view-details-button-2" class="btn btn-outline-success details" onclick="viewDetails2()">View Details</button>
             </div>
-            <div class="col-md text-center">
+            <div class="col-md text-center" id="cosmograph-daytona">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Cosmograph-Daytona</h5>
                 <img src="media/images/cosmograph-daytona.png" alt="cosmograph-daytona" class="watches">
                 <h5 style="font-family: serif; font-size: 1.1rem;">A WATCH BORN TO RACE</h5>
@@ -108,7 +108,7 @@
         </div>
 
         <div class="row pt-1 pt-lg-5">
-            <div class="col-md text-center">
+            <div class="col-md text-center" id="explorer">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Explorer II</h5>
                 <img src="media/images/explorer.png" alt="explorer" class="watches">
                 <h5 style="font-family: serif; font-size: 1.1rem;">SCALING NEW HEIGHTS</h5>
@@ -120,7 +120,7 @@
                 </div>
                 <button id="view-details-button-4" class="btn btn-outline-success details" onclick="viewDetails4()">View Details</button>
             </div>
-            <div class="col-md text-center">
+            <div class="col-md text-center" id="gmt-master">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> GMT-Master II</h5>
                 <img src="media/images/gmt-master.png" alt="gmt-master" class="watches">
                 <h5 style="font-family: serif; font-size: 1.1rem;">THE COSMOPOLITAN WATCH</h5>
@@ -132,7 +132,7 @@
                 </div>
                 <button id="view-details-button-5" class="btn btn-outline-success details" onclick="viewDetails5()">View Details</button>
             </div>
-            <div class="col-md text-center">
+            <div class="col-md text-center" id="milgauss">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Milgauss</h5>
                 <img src="media/images/milgauss.png" alt="milgauss" class="watches">
                 <h5 style="font-family: serif; font-size: 1.1rem;">HONOURING SCIENCE</h5>
@@ -147,7 +147,7 @@
         </div>
 
         <div class="row pt-1 pt-lg-5">
-            <div class="col-md text-center">
+            <div class="col-md text-center" id="sea-dweller">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Sea-Dweller</h5>
                 <img src="media/images/sea-dweller.png" alt="sea-dweller" class="watches">
                 <h5 style="font-family: serif; font-size: 1.1rem;">THE WATCH THAT CONQUERED THE DEEP</h5>
@@ -159,7 +159,7 @@
                 </div>
                 <button id="view-details-button-7" class="btn btn-outline-success details" onclick="viewDetails7()">View Details</button>
             </div>
-            <div class="col-md text-center">
+            <div class="col-md text-center" id="sky-dweller">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Sky-Dweller</h5>
                 <img src="media/images/sky-dweller.png" alt="sky-dweller" class="watches">
                 <h5 style="font-family: serif; font-size: 1.1rem;">KEEPING TRACK OF TIME ACROSS THE WORLD</h5>
@@ -171,7 +171,7 @@
                 </div>
                 <button id="view-details-button-8" class="btn btn-outline-success details" onclick="viewDetails8()">View Details</button>
             </div>
-            <div class="col-md text-center">
+            <div class="col-md text-center" id="submariner">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Submariner</h5>
                 <img src="media/images/submariner.png" alt="submariner" class="watches">
                 <h5 style="font-family: serif; font-size: 1.1rem;">THE REFERENCE AMONG DIVER WATCHES</h5>
@@ -186,7 +186,7 @@
         </div>
 
         <div class="row pt-1 pt-lg-5">
-            <div class="col-4 text-center mx-auto">
+            <div class="col-4 text-center mx-auto" id="yacht-master">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Yacht-Master II</h5>
                 <img src="media/images/yacht-master.png" alt="yacht-master" class="watches">
                 <h5 style="font-family: serif; font-size: 1.1rem;">THE WATCH OF THE OPEN SEAS</h5>
@@ -201,11 +201,11 @@
         </div>
     </div>
 
-    <!-- World of Rolex-->
+    <!-- World of Rolex -->
     <div id="world-of-rolex" class="container-fluid bg-light">
         <h4 class="text-center pb-4 pt-4 heading"><u>World of Rolex</u></h4>
         <p class="text-uppercase px-5 pb-4" style="font-size: 1.25rem; font-weight: bold;">Today, Rolex is present at the most prestigious events in golf, yachting, tennis, motor sport, and equestrianism. Rolex makes a unique and lasting contribution to global sports.</p>
-        <div class="row mt-5 mb-5">
+        <div class="row mt-5 mb-5" id="tennis">
             <div class="col-md-8 order-1 order-md-12">
                 <h5 class="px-5 mt-md-3 mt-4" style="text-decoration: underline; text-underline-offset: 5px;">Rolex & Tennis</h5>
                 <h5 class="px-5 py-2 text-uppercase">Rolex supports the most prestigious tournaments, players and organizations in tennis.</h5>
@@ -215,7 +215,7 @@
                 <img class="img-fluid px-lg-5" width="400" src="https://content.rolex.com/dam/world-of-rolex/tennis/rolex-and-tennis-wimbledon_wim19jb_526.jpg?imwidth=1440">
             </div>
         </div>
-        <div class="row mt-5 mb-5 pb-5">
+        <div class="row mt-5 mb-5 pb-5" id="equestrianism">
             <div class="col-md-8 order-1 order-md-12">
                 <h5 class="px-5 mt-md-3 mt-4" style="text-decoration: underline; text-underline-offset: 5px;">Rolex & Equestrianism</h5>
                 <h5 class="px-5 py-2 text-uppercase">The crown in equestrianism for over 60 years, Rolex is a major force at play, supporting the pinnacle of the sport.</h5>
@@ -225,7 +225,7 @@
                 <img class="img-fluid px-lg-5" width="400" src="https://content.rolex.com/dam/world-of-rolex/equestrianism/equestrianism_aach16kh_0283.jpg?imwidth=1440">
             </div>
         </div>
-        <div class="row mt-5 mb-5 pb-5">
+        <div class="row mt-5 mb-5 pb-5" id="golf">
             <div class="col-md-8 order-1 order-md-12">
                 <h5 class="px-5 mt-md-3 mt-4" style="text-decoration: underline; text-underline-offset: 5px;">Rolex & Golf</h5>
                 <h5 class="px-5 py-2 text-uppercase">For more than 50 years, Rolex has been at the very heart of golf.</h5>
@@ -235,7 +235,7 @@
                 <img class="img-fluid px-lg-5" width="400" src="https://content.rolex.com/dam/world-of-rolex/golf/rolex-and-golf-the-evian-championship_evian13sa_0336.jpg?imwidth=1440">
             </div>
         </div>
-        <div class="row mt-5 mb-5 pb-5">
+        <div class="row mt-5 mb-5 pb-5" id="motor-sports">
             <div class="col-md-8 order-1 order-md-12">
                 <h5 class="px-5 mt-md-3 mt-4" style="text-decoration: underline; text-underline-offset: 5px;">Rolex & Motor Sport</h5>
                 <h5 class="px-5 py-2 text-uppercase">Rolex's history of close ties with motor racing and speed reaches back to the 1930s.</h5>
@@ -245,7 +245,7 @@
                 <img class="img-fluid px-lg-5" width="400" src="https://content.rolex.com/dam/world-of-rolex/motorsports/motorsports_f1aus18js_0618_r.jpg?imwidth=1440">
             </div>
         </div>
-        <div class="row mt-5 pb-5">
+        <div class="row mt-5 pb-5" id="yachting">
             <div class="col-md-8 order-1 order-md-12">
                 <h5 class="px-5 mt-md-3 mt-4" style="text-decoration: underline; text-underline-offset: 5px;">Rolex & Yachting</h5>
                 <h5 class="px-5 py-2 text-uppercase">Rolex has forged a privileged relationship with yachting out of a natural affinity with this dynamic sport and its time-honoured values. </h5>
@@ -261,7 +261,7 @@
     <div id="our-heritage" class="container-fluid bg-white">
         <h4 class="text-center pb-4 pt-4 heading"><u>Our Heritage</u></h4>
         <p class="text-uppercase px-5" style="font-size: 1.25rem; font-weight: bold;">For over a century, Rolex watches have accompanied explorers and achievers around the world, from the top of the highest mountains to the deepest reaches of the ocean.</p>
-        <div class="row mt-5 mb-5">
+        <div class="row mt-5 mb-5" id="everest">
             <div class="col-md-4">
                 <img class="img-fluid px-lg-5 img-everest" width="400" src="https://content.rolex.com/dam/world-of-rolex/science-and-exploration/perpetual-planet/perpetual-planet-everest_setting-out-to-conquer-the-world-2_portrait.jpg?imwidth=1380">
             </div>
@@ -270,7 +270,7 @@
                 <p class="px-5">Rolex watches have taken part in some of humanity’s greatest adventures. One such occasion was the 1953 expedition to Everest, led by Sir John Hunt, which saw Sir Edmund Hillary and Tenzing Norgay become the first to summit the world’s highest mountain. The same year, to honour this historic exploit, Rolex officially launched the Explorer model.</p>
             </div>
         </div>
-        <div class="row mt-5 mb-5">
+        <div class="row mt-5 mb-5" id="mariana">
             <div class="col-md-8 order-1 order-md-12">
                 <h3 class="px-5 mt-md-2 mt-4">Mariana Trench</h3>
                 <p class="px-5">In 1960 a milestone for deep-sea exploration was established with an experimental Rolex watch, the Deep Sea Special. It was attached to the exterior of the bathyscaphe Trieste, piloted by Swiss oceanographer Jacques Piccard and American Navy Lieutenant Don Walsh descended to a record depth of 10,916 metres in the Mariana Trench.</p>
@@ -330,8 +330,8 @@
     </div>
 
     <!-- Footer -->
-    <div class="container-fluid pt-3 pb-3 bg-light">
-        <h5 class="text-center mb-3 mt-2">Follow Us on Social Media</h5>
+    <div class="container-fluid pt-4 pb-5 bg-light">
+        <h5 class="text-center mb-4 mt-2">Follow Us on Social Media</h5>
         <div class="text-center">
             <button class="social-buttons" style="width: 40px;"><a class="fa fa-lg fa-facebook social-button" href="https://www.facebook.com/rolex"></a></button>
             <button class="social-buttons" style="width: 40px;"><a class="fa fa-lg fa-twitter social-button" href="https://twitter.com/rolex"></a></button>
@@ -339,8 +339,48 @@
             <button class="social-buttons" style="width: 40px;"><a class="fa fa-lg fa-linkedin social-button" href="https://www.linkedin.com/company/rolex"></a></i></button>
             <button class="social-buttons" style="width: 40px;"><a class="fa fa-lg fa-youtube social-button" href="https://www.youtube.com/rolex"></a></button>
             <button class="social-buttons" style="width: 40px;"><a class="fa fa-lg fa-pinterest social-button" href="https://www.pinterest.com/rolex/"></a></button>
-        <p class="text-center mt-4 mb-0" style="font-family: serif;">Copyright &#169; Rolex 2021. All Rights Reserved.</p> 
-        <img class="pt-4 pb-2" src="media/images/logo.jpg" width="70" alt="logo">
+        </div>
+    </div>
+    <div class="container-fluid pt-3 pb-3 bg-dark text-secondary">
+        <img class="mt-2 mb-1 d-block mx-auto footer-logo" src="media/images/rolex-logo.png" alt="logo">
+        <div class="row text-center mt-md-3">
+            <div class="col-md-3 mt-4">
+                <p class="mb-1" style="text-decoration: underline; font-weight: bold; font-size: 0.85rem;">THE COLLECTION</p>
+                <a class="pt-1 text-left d-block footer-links" href="#air-king">Air-King</a>
+                <a class="pt-0 text-left d-block footer-links" href="#cellini">Cellini</a>
+                <a class="pt-0 text-left d-block footer-links" href="#cosmograph-daytona">Cosmograph-Daytona</a>
+                <a class="pt-0 text-left d-block footer-links" href="#explorer">Explorer II</a>
+                <a class="pt-0 text-left d-block footer-links" href="#gmt-master">GMT-Master II</a>
+                <a class="pt-0 text-left d-block footer-links" href="#milgauss">Milgauss</a>
+                <a class="pt-0 text-left d-block footer-links" href="#sea-dweller">Sea-Dweller</a>
+                <a class="pt-0 text-left d-block footer-links" href="#sky-dweller">Sky-Dweller</a>
+                <a class="pt-0 text-left d-block footer-links" href="#submariner">Submariner</a>
+                <a class="pt-0 text-left d-block footer-links" href="#yacht-master">Yacht-Master II</a>
+            </div>
+            <div class="col-md-3 mt-4">
+                <p class="mb-1" style="text-decoration: underline; font-weight: bold; font-size: 0.85rem;">WORLD OF ROLEX</p>
+                <a class="pt-1 text-left d-block footer-links" href="#tennis">Tennis</a>
+                <a class="pt-0 text-left d-block footer-links" href="#equestrianism">Equestrianism</a>
+                <a class="pt-0 text-left d-block footer-links" href="#golf">Golf</a>
+                <a class="pt-0 text-left d-block footer-links" href="#motor-sports">Motor Sports</a>
+                <a class="pt-0 text-left d-block footer-links" href="#yachting">Yachting</a>
+            </div>
+            <div class="col-md-3 mt-4">
+                <p class="mb-1" style="text-decoration: underline; font-weight: bold; font-size: 0.85rem;">OFFICIAL CHANNELS</p>
+                <a class="pt-1 text-left d-block footer-links" href="https://www.facebook.com/rolex">Facebook</a>
+                <a class="pt-0 text-left d-block footer-links" href="https://twitter.com/rolex">Twitter</a>
+                <a class="pt-0 text-left d-block footer-links" href="https://www.instagram.com/rolex/">Instagram</a>
+                <a class="pt-0 text-left d-block footer-links" href="https://www.linkedin.com/company/rolex">Linkedin</a>
+                <a class="pt-0 text-left d-block footer-links" href="https://www.youtube.com/rolex">Youtube</a>
+                <a class="pt-0 text-left d-block footer-links" href="https://www.pinterest.com/rolex/">Pinterest</a>
+            </div>
+            <div class="col-md-3 mt-4">
+                <p class="mb-1" style="text-decoration: underline; font-weight: bold; font-size: 0.85rem;">HERITAGE</p>
+                <a class="pt-1 text-left d-block footer-links" href="#everest">Mount Everest</a>
+                <a class="pt-0 text-left d-block footer-links" href="#mariana">Mariana Trench</a>
+            </div>
+        </div>
+        <p class="text-center mt-lg-3 mt-4 mb-0 copyright" style="font-family: serif;">Copyright &#169; Rolex 2021. All Rights Reserved.</p>
     </div>
 
     <script src="script.js"></script>
