--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
         </div>
 
         <div class="row pt-1 pt-lg-5">
-            <div class="col-4 text-center mx-auto" id="yacht-master">
+            <div class="col-md text-center mx-auto" id="yacht-master">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Yacht-Master II</h5>
                 <img src="media/images/yacht-master.png" alt="yacht-master" class="watches">
                 <h5 style="font-family: serif; font-size: 1.1rem;">THE WATCH OF THE OPEN SEAS</h5>
                 <p style="font-family: serif;">(1992 - Present)</p>
                 <div id="view-details-10" style="display: none;">
-                    <p class="vd px-3">THE YACHT-MASTER IS INSPIRED BY THE RICH HERITAGE THAT HAS BOUND ROLEX TO THE WORLD OF SAILING AND EMBODIES THE SPIRIT OF THE SAILOR.</p>
+                    <p class="px-4">THE YACHT-MASTER IS INSPIRED BY THE RICH HERITAGE THAT HAS BOUND ROLEX TO THE WORLD OF SAILING AND EMBODIES THE SPIRIT OF THE SAILOR.</p>
                     <p><i>Oyster, 44mm, Oystersteel and Everosegold</i></p>
                     <h6>$28,950</h6>
                 </div>
@@ -205,7 +205,7 @@
     <div id="world-of-rolex" class="container-fluid bg-light">
         <h4 class="text-center pb-4 pt-4 heading"><u>World of Rolex</u></h4>
         <p class="text-uppercase px-5 pb-4" style="font-size: 1.25rem; font-weight: bold;">Today, Rolex is present at the most prestigious events in golf, yachting, tennis, motor sport, and equestrianism. Rolex makes a unique and lasting contribution to global sports.</p>
-        <div class="row mt-5 mb-5" id="tennis">
+        <div class="row mt-5 mb-5 pb-5" id="tennis">
             <div class="col-md-8 order-1 order-md-12">
                 <h5 class="px-5 mt-md-3 mt-4" style="text-decoration: underline; text-underline-offset: 5px;">Rolex & Tennis</h5>
                 <h5 class="px-5 py-2 text-uppercase">Rolex supports the most prestigious tournaments, players and organizations in tennis.</h5>
