--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div id="view-details-1" style="display: none;">
                     <p class="px-5">THE ROLEX AIR-KING PAYS TRIBUTE TO THE PIONEERS OF FLIGHT AND THE OYSTER'S ROLES IN THE EPIC STORY OF AVIATION.</p>
                     <p><i>Oyster, 40mm, Oystersteel</i></p>
-                    <h6>$7,950</h6>
+                    <h6 class="pb-2">$7,950</h6>
                 </div>
                 <button id="view-details-button-1" class="btn btn-outline-success details" onclick="viewDetails1()">View Details</button>
             </div>
@@ -89,7 +89,7 @@
                 <div id="view-details-2" style="display: none;">
                     <p class="px-5">THE CELLINI COLLECTION BY ROLEX CELEBRATES THE ETERNAL ELEGANCE OF TRADITIONAL TIMEPIECES WITH A CONTEMPORARY TOUCH.</p>
                     <p><i>Oyster, 39mm, Everosegold</i></p>
-                    <h6>$26,950</h6>
+                    <h6 class="pb-2">$26,950</h6>
                 </div>
                 <button id="view-details-button-2" class="btn btn-outline-success details" onclick="viewDetails2()">View Details</button>
             </div>
@@ -101,7 +101,7 @@
                 <div id="view-details-3" style="display: none;">
                     <p class="px-5">THE OYSTER PERPETUAL COSMOGRAPH DAYTONA IS THE ULTIMATE TOOL WATCH FOR THOSE WITH A PASSION FOR DRIVING AND SPEED.</p>
                     <p><i>Oyster, 40mm, Oystersteel and Yellowgold</i></p>
-                    <h6>$21,950</h6>
+                    <h6 class="pb-2">$21,950</h6>
                 </div>
                 <button id="view-details-button-3" class="btn btn-outline-success details" onclick="viewDetails3()">View Details</button>
             </div>
@@ -116,7 +116,7 @@
                 <div id="view-details-4" style="display: none;">
                     <p class="px-3">THE OYSTER PERPETUAL EXPLORER EVOLVED FROM ROLEX'S DEEP INVOLVEMENT WITH EXPLORATION AND GOES WHERE FEW PEOPLE VENTURE.</p>
                     <p><i>Oyster, 42mm, Oystersteel</i></p>
-                    <h6>$11,950</h6>
+                    <h6 class="pb-2">$11,950</h6>
                 </div>
                 <button id="view-details-button-4" class="btn btn-outline-success details" onclick="viewDetails4()">View Details</button>
             </div>
@@ -128,7 +128,7 @@
                 <div id="view-details-5" style="display: none;">
                     <p class="px-3">THE GMT-MASTER WAS DEVELOPED AS A NAVIGATION INSTRUMENT FOR PROFESSIONALS TRAVELLING THE GLOBE TO SHOW TWO DIFFERENT TIMEZONES.</p>
                     <p><i>Oyster, 40mm, Whitegold</i></p>
-                    <h6>$49,950</h6>
+                    <h6 class="pb-2">$49,950</h6>
                 </div>
                 <button id="view-details-button-5" class="btn btn-outline-success details" onclick="viewDetails5()">View Details</button>
             </div>
@@ -140,7 +140,7 @@
                 <div id="view-details-6" style="display: none;">
                     <p class="px-3">THE OYSTER PERPETUAL MILGAUSS IS A PIONEERING ANTI-MAGNETIC WATCH DESIGNED TO MEET THE DEMANDS OF ENGINEERS AND SCIENTISTS.</p>
                     <p><i>Oyster, 40mm, Oystersteel</i></p>
-                    <h6>$8,950</h6>
+                    <h6 class="pb-2">$8,950</h6>
                 </div>
                 <button id="view-details-button-6" class="btn btn-outline-success details" onclick="viewDetails6()">View Details</button>
             </div>
@@ -155,7 +155,7 @@
                 <div id="view-details-7" style="display: none;">
                     <p class="px-3">THE SEA-DWELLER IS AN ULTRA RESISTANT DIVERS' WATCH WATERPROOF TO A DEPTH OF 4000FT AND WAS ENGINEERED BY ROLEX FOR DEEP-SEA EXPLORATION.</p>
                     <p><i>Oyster, 43mm, Oystersteel and Yellowgold</i></p>
-                    <h6>$16,950</h6>
+                    <h6 class="pb-2">$16,950</h6>
                 </div>
                 <button id="view-details-button-7" class="btn btn-outline-success details" onclick="viewDetails7()">View Details</button>
             </div>
@@ -167,7 +167,7 @@
                 <div id="view-details-8" style="display: none;">
                     <p class="px-4">THE OYSTER PERPETUAL SKY-DWELLER IS THE PERFECT TRAVEL COMPANION AND WAS DEVELOPED BY ROLEX FOR FREQUENT VOYAGERS.</p>
                     <p><i>Oyster, 42mm, Everosegold</i></p>
-                    <h6>$59,950</h6>
+                    <h6 class="pb-2">$59,950</h6>
                 </div>
                 <button id="view-details-button-8" class="btn btn-outline-success details" onclick="viewDetails8()">View Details</button>
             </div>
@@ -179,7 +179,7 @@
                 <div id="view-details-9" style="display: none;">
                     <p class="px-5">THE OYSTER PERPETUAL SUBMARINER IS A WATCH THAT EXEMPLIFIES THE HISTORIC LINK BETWEEN ROLEX AND THE WORLD OF DIVING.</p>
                     <p><i>Oyster, 41mm, Yellowgold</i></p>
-                    <h6>$36,950</h6>
+                    <h6 class="pb-2">$36,950</h6>
                 </div>
                 <button id="view-details-button-9" class="btn btn-outline-success details" onclick="viewDetails9()">View Details</button>
             </div>
@@ -194,7 +194,7 @@
                 <div id="view-details-10" style="display: none;">
                     <p class="px-4">THE YACHT-MASTER IS INSPIRED BY THE RICH HERITAGE THAT HAS BOUND ROLEX TO THE WORLD OF SAILING AND EMBODIES THE SPIRIT OF THE SAILOR.</p>
                     <p><i>Oyster, 44mm, Oystersteel and Everosegold</i></p>
-                    <h6>$28,950</h6>
+                    <h6 class="pb-2">$28,950</h6>
                 </div>
                 <button id="view-details-button-10" class="btn btn-outline-success details" onclick="viewDetails10()">View Details</button>
             </div>
