--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 <a class="pt-0 text-left d-block footer-links" href="#mariana">Mariana Trench</a>
             </div>
         </div>
-        <p class="text-center mt-lg-3 mt-4 mb-0 copyright" style="font-family: serif;">Copyright &#169; Rolex 2021. All Rights Reserved.</p>
+        <p class="text-center mt-lg-3 mt-4 mb-0 copyright" style="font-family: serif; font-weight: bold;">Copyright &#169; Rolex 2021. All Rights Reserved.</p>
     </div>
 
     <script src="script.js"></script>
