--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p><i>Oyster, 40mm, Oystersteel</i></p>
                     <h6 class="pb-2">$7,950</h6>
                 </div>
-                <button id="view-details-button-1" class="btn btn-outline-success details" onclick="viewDetails1()">View Details</button>
+                <button id="button-1" class="btn btn-outline-success details" onclick="viewDetails('view-details-1', 'button-1');">View Details</button>
             </div>
             <div class="col-md text-center" id="cellini">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Cellini</h5>
@@ -91,7 +91,7 @@
                     <p><i>Oyster, 39mm, Everosegold</i></p>
                     <h6 class="pb-2">$26,950</h6>
                 </div>
-                <button id="view-details-button-2" class="btn btn-outline-success details" onclick="viewDetails2()">View Details</button>
+                <button id="button-2" class="btn btn-outline-success details" onclick="viewDetails('view-details-2', 'button-2');">View Details</button>
             </div>
             <div class="col-md text-center" id="cosmograph-daytona">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Cosmograph-Daytona</h5>
@@ -103,7 +103,7 @@
                     <p><i>Oyster, 40mm, Oystersteel and Yellowgold</i></p>
                     <h6 class="pb-2">$21,950</h6>
                 </div>
-                <button id="view-details-button-3" class="btn btn-outline-success details" onclick="viewDetails3()">View Details</button>
+                <button id="button-3" class="btn btn-outline-success details" onclick="viewDetails('view-details-3', 'button-3');">View Details</button>
             </div>
         </div>
 
@@ -118,7 +118,7 @@
                     <p><i>Oyster, 42mm, Oystersteel</i></p>
                     <h6 class="pb-2">$11,950</h6>
                 </div>
-                <button id="view-details-button-4" class="btn btn-outline-success details" onclick="viewDetails4()">View Details</button>
+                <button id="button-4" class="btn btn-outline-success details" onclick="viewDetails('view-details-4', 'button-4');">View Details</button>
             </div>
             <div class="col-md text-center" id="gmt-master">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> GMT-Master II</h5>
@@ -130,7 +130,7 @@
                     <p><i>Oyster, 40mm, Whitegold</i></p>
                     <h6 class="pb-2">$49,950</h6>
                 </div>
-                <button id="view-details-button-5" class="btn btn-outline-success details" onclick="viewDetails5()">View Details</button>
+                <button id="button-5" class="btn btn-outline-success details" onclick="viewDetails('view-details-5', 'button-5');">View Details</button>
             </div>
             <div class="col-md text-center" id="milgauss">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Milgauss</h5>
@@ -142,7 +142,7 @@
                     <p><i>Oyster, 40mm, Oystersteel</i></p>
                     <h6 class="pb-2">$8,950</h6>
                 </div>
-                <button id="view-details-button-6" class="btn btn-outline-success details" onclick="viewDetails6()">View Details</button>
+                <button id="button-6" class="btn btn-outline-success details" onclick="viewDetails('view-details-6', 'button-6');">View Details</button>
             </div>
         </div>
 
@@ -157,7 +157,7 @@
                     <p><i>Oyster, 43mm, Oystersteel and Yellowgold</i></p>
                     <h6 class="pb-2">$16,950</h6>
                 </div>
-                <button id="view-details-button-7" class="btn btn-outline-success details" onclick="viewDetails7()">View Details</button>
+                <button id="button-7" class="btn btn-outline-success details" onclick="viewDetails('view-details-7', 'button-7');">View Details</button>
             </div>
             <div class="col-md text-center" id="sky-dweller">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Sky-Dweller</h5>
@@ -169,7 +169,7 @@
                     <p><i>Oyster, 42mm, Everosegold</i></p>
                     <h6 class="pb-2">$59,950</h6>
                 </div>
-                <button id="view-details-button-8" class="btn btn-outline-success details" onclick="viewDetails8()">View Details</button>
+                <button id="button-8" class="btn btn-outline-success details" onclick="viewDetails('view-details-8', 'button-8');">View Details</button>
             </div>
             <div class="col-md text-center" id="submariner">
                 <h5 class="pb-2" style="font-family: Candara, sans-serif;">Rolex Oyster Perpetual <br> Submariner</h5>
@@ -181,7 +181,7 @@
                     <p><i>Oyster, 41mm, Yellowgold</i></p>
                     <h6 class="pb-2">$36,950</h6>
                 </div>
-                <button id="view-details-button-9" class="btn btn-outline-success details" onclick="viewDetails9()">View Details</button>
+                <button id="button-9" class="btn btn-outline-success details" onclick="viewDetails('view-details-9', 'button-9');">View Details</button>
             </div>
         </div>
 
@@ -196,7 +196,7 @@
                     <p><i>Oyster, 44mm, Oystersteel and Everosegold</i></p>
                     <h6 class="pb-2">$28,950</h6>
                 </div>
-                <button id="view-details-button-10" class="btn btn-outline-success details" onclick="viewDetails10()">View Details</button>
+                <button id="button-10" class="btn btn-outline-success details" onclick="viewDetails('view-details-10', 'button-10');">View Details</button>
             </div>
         </div>
     </div>
